--- a/My-friends-list/My-friends-list.html
+++ b/My-friends-list/My-friends-list.html
@@ -1,144 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <title>Movie List</title>
-  </head>
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Movie List</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="favorite.html">Favorite</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 rounded">
+  <a class="navbar-brand" href="#">My Friends List</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="container mt-5">
-      <div class="row">
-        <!-- Search Bar -->
-        <form class="form-inline" id="search-form">
-          <label class="sr-only" for="inlineFormInputName2"
-            >Search Keyword</label
-          >
-          <input
-            type="text"
-            class="form-control mb-2 mr-sm-2"
-            id="search-input"
-            placeholder="Keyword..."
-          />
-          <button
-            type="submit"
-            class="btn btn-primary mb-2"
-            id="search-submit-button"
-          >
-            Search
-          </button>
-        </form>
-      </div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Likes</a>
+      </li>
+  </div>
+</nav>
+<!-- Container -->
+<div class="container mt-5">
+  <!-- Search Bar -->
+  <div class="row">
+    <form class="form-inline mb-3" id="search-form">
+      <label class="sr-only" for="inlineFormInputName2">Search keyword</label>
+      <input type="text" class="form-control mb-2 mr-sm-2" id="search-input" placeholder="Name...">
+      <button type="submit" class="btn btn-primary mb-2" id="search-submit">Search</button>
+    </form>
+  </div>
 
-      <div class="row" id="data-panel">
-        <!-- Render Movie List -->
-      </div>
+  <!-- Friends List -->
+  <div class="container mt-5">
+    <div class="row" id="data-panel">
     </div>
-
-    <!-- paginator -->
-    <nav aria-label="Page navigation">
-      <ul class="pagination justify-content-center" id="paginator">
-      </ul>
-    </nav>
-
-    <!-- Movie Modal -->
-    <div
-      class="modal fade"
-      id="movie-modal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="movie-modal-title">Modal title</h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body" id="movie-modal-body">
-            <div class="row">
-              <div class="col-sm-8" id="movie-modal-image">
-                <img
-                  src="https://github.com/ALPHACamp/movie-list-api/blob/master/public/posters/c9XxwwhPHdaImA2f1WEfEsbhaFB.jpg?raw=true"
-                  alt="movie-poster"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="col-sm-4">
-                <p><em id="movie-modal-date">release date: 2020/01/05</em></p>
-                <p id="movie-modal-description">This is a movie.</p>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-          </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="friend-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="friend-modal-title">Guillaume Vincent</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img src="https://randomuser.me/api/portraits/men/88.jpg" alt="Friend Avatar" class="image-avatar d-block mx-auto rounded ">
+          <ul class="list-group list-group-flush">
+            <li class="friend-gender list-group-item">gender: male</li>
+            <li class="friend-age list-group-item">age: 25</li>
+            <li class="friend-birthday list-group-item">birthday: "1995-05-05"</li>
+            <li class="friend-region list-group-item">region: "CH"</li>
+            <li class="list-group-item">e-mail: <a class="friend-email" href="mailto:guillaume.vincent@example.com">guillaume.vincent@example.com</a></li>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">♥Like</button>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./index.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+  </div>
+  <!-- Pagination -->
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+    </ul>
+  </nav>
